--- a/src/app/core/components/image-cropper/image-cropper.component.scss
+++ b/src/app/core/components/image-cropper/image-cropper.component.scss
@@ -1,3 +1,34 @@
-.img-crop{
-    color: #000;
+.slide-container{
+    width: 100%;
+    max-height: 400px !important;
+}
+
+.img{
+    width: 100% !important;
+    height: 400px;
+    align-items: center;
+}
+
+:host ::ng-deep [_nghost-sra-c86] > div[_ngcontent-sra-c86] img.ngx-ic-source-image[_ngcontent-sra-c86] {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+:host ::ng-deep .ngx-ic-source-image {
+    object-fit: cover;
+}
+
+
+:host ::ng-deep .swiper-slide img {
+    width: 100%;
+}
+
+:host ::ng-deep .ngx-ic-overlay {
+    width: 100% !important;
+}
+
+:host ::ng-deep .ngx-ic-cropper {
+    width: 100% !important;
+    left: 0px !important;
 }
