--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -3,7 +3,7 @@
     <div *ngIf="!isPrompt" class="mapclass"
       style="position: relative;height: 100%;width:100%; overflow: hidden;">
       <div class="top-result-container" style="width: 95%;">
-        <div class="c-fab-button" *ngIf="searchCriteria">
+        <div class="c-fab-button" *ngIf="searchCriteria" style="width: 290px;">
           <div (click)="showSonarSearchResultInListView(true)"> {{resultCount}}
             results </div>
           <div style="line-height: 11px;">
@@ -27,16 +27,19 @@
           </div>
         </div> -->
         <div style="display: flex; justify-content: space-between; width: 100%;">
-          <div (click)="viewGreetingDetails()" class="c-fab-button">
-            <ion-icon style="font-size: 26px;"
-              name="greeting-no-circle"></ion-icon>
-            <div *ngIf="greetListNumber > 0"></div>
-            <div style="line-height: 5px;">
-              <ion-icon style="font-size: 22px;padding-right: 5px;"
-                name="chevron-forward-outline"></ion-icon>
+          <div class="greet-container">
+            <div (click)="viewGreetingDetails()" class="c-fab-button">
+              <ion-icon style="font-size: 26px;"
+                name="greeting-no-circle"></ion-icon>
+              <div *ngIf="greetListNumber > 0"></div>
+              <div style="line-height: 5px;">
+                <ion-icon style="font-size: 22px;padding-right: 5px;"
+                  name="chevron-forward-outline"></ion-icon>
+              </div>
             </div>
-            <div class="greetNumberDot"><p class="greetNumber">{{greetListNumber}} </p></div>
+            <div class="greetNumberDot"><p class="greetNumber">{{greetListNumber}} </p></div>  
           </div>
+          
 
           <div style="display: flex; flex-direction: column;">
 
