--- a/src/app/core/components/image-cropper/image-cropper.component.scss
+++ b/src/app/core/components/image-cropper/image-cropper.component.scss
@@ -1,34 +1,73 @@
-.slide-container{
-    width: 100%;
-    max-height: 400px !important;
-}
+// .img{
+//     width: 100% !important;
+//     align-items: center;
+// }
 
-.img{
-    width: 100% !important;
-    height: 400px;
-    align-items: center;
-}
+// :host ::ng-deep [_nghost-sra-c86] > div[_ngcontent-sra-c86] img.ngx-ic-source-image[_ngcontent-sra-c86] {
+//     width: 100%;
+//     height: 100%;
+//     object-fit: cover;
+// }
 
-:host ::ng-deep [_nghost-sra-c86] > div[_ngcontent-sra-c86] img.ngx-ic-source-image[_ngcontent-sra-c86] {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
+// :host ::ng-deep [_nghost-nxy-c140] > div[_ngcontent-nxy-c140] {
+//     height: 100%;
+// }
 
-:host ::ng-deep .ngx-ic-source-image {
-    object-fit: cover;
-}
+// :host ::ng-deep .ngx-ic-source-image {
+//     max-height: 400px !important;
+//     min-height: 400px !important;
+//     object-fit: cover;
+// }
 
+// .card{
 
-:host ::ng-deep .swiper-slide img {
-    width: 100%;
-}
+//       width: 100%;
+//       display: flex;
+//       align-items: center;
+//       justify-content: center;
+//       margin: 0;
+//       box-shadow: none;
+//       overflow: visible;
+// }
 
-:host ::ng-deep .ngx-ic-overlay {
-    width: 100% !important;
-}
+// :host ::ng-deep .swiper-slide img {
+//     width: 100%;
+// }
 
-:host ::ng-deep .ngx-ic-cropper {
-    width: 100% !important;
-    left: 0px !important;
-}
+// :host ::ng-deep .ngx-ic-overlay {
+//     width: 100% !important;
+// }
+
+// :host ::ng-deep .ngx-ic-cropper {
+//     width: 100% !important;
+//     left: 0px !important;
+//     height: 99%;
+// }
+
+// :host ::ng-deep .swiper-pagination.swiper-pagination-bullets{
+//     position: relative;
+//     padding-top: 10px;
+//     bottom: -9px;
+//     left: 0;
+//     width: 100%;
+//     height: 44px;
+//     justify-content: center;
+//     display: flex;
+// }
+  
+// :host ::ng-deep .swiper-pagination-bullet.swiper-pagination-bullet-active {
+
+//     margin: 0 8px !important;
+//     height: 14px;
+//     width: 14px;
+//     background: none;
+//     outline-offset: 3px;
+//     outline: 1px solid #285078;
+    
+//     background-color: #03a9f5;
+//     outline-color: #03a9f5;
+//     &-active {
+//       background-color: #03a9f5;
+//       outline-color: #03a9f5;
+//     }
+// }
