--- a/src/app/pages/post/add-post/add-post.page.html
+++ b/src/app/pages/post/add-post/add-post.page.html
@@ -93,9 +93,13 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
     </ion-card>
   </div>
 
-  <div *ngIf="fileToUpload && fileToUpload.length > 0" style="width: 100%; max-height: 500px; overflow: hidden;">
+  <div *ngIf="fileToUpload && fileToUpload.length > 0" style="width: 100%;">
     <!-- <div *ngFor="let fileToUpload of fileToUpload"> -->
-      <app-image-cropper [imageUri]="fileToUpload"></app-image-cropper>
+    <app-image-cropper 
+      [imageUri]="fileToUpload" 
+      (croppedImageMapChange)="onCroppedImageMapChange($event)"
+      (isAr_Locked)="onArChange($event)">
+    </app-image-cropper>
     <!-- </div> -->
   </div>
 
@@ -223,8 +227,8 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
       flex-direction: column;
       align-items: center;
       justify-content: center;
-      gap: 10px;
-  ">
+      gap: 10px;"
+      >
     </app-multiple-media-upload>
 
     <!-- <div class="error-message" *ngIf="saveClicked && post.PostImages.length==0 && post.PostDescription==''">
@@ -245,13 +249,12 @@ background: #EAF1F4 0% 0% no-repeat padding-box;">
   </ion-button> -->
 
   <ion-button shape="round" expand="block"
-  color="primary" 
-  [disabled]="photo.length === 0"
-  (click)="addPost()"
-  style="height: 53px;
-  font: normal normal bold 16px/24px SF Pro Display;
-letter-spacing: 0.25px;
-color: #FFFFFF;">
-  Create post
-</ion-button>
+    color="primary" 
+    [disabled]="(photo.length === 0) && (!isArLocked)"
+    (click)="openPreviewModal()"
+    style="height: 53px;
+    font: normal normal bold 16px/24px SF Pro Display; letter-spacing: 0.25px; color: #FFFFFF;"
+    >
+    Preview
+  </ion-button>
 </ion-footer>
