--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -11,6 +11,7 @@
             <ion-icon style="font-size: 16px;margin-right: 10px;" name="close-icon" (click)="clearResults(true)"></ion-icon>
           </div>
         </div>
+        <ion-button (click)="businessPage()">click me</ion-button>
 
         <!-- *ngIf="_commonService?.viewingUsers?.length" -->
         
