--- a/src/app/pages/map/map-search/map-search.component.scss
+++ b/src/app/pages/map/map-search/map-search.component.scss
@@ -1,10 +1,21 @@
+.sonareventimg {
+    margin-top: -273px;
+    position: absolute;
+    right: 0; 
+    margin-left: 2px;
+  }
+  .sonardonationimg {
+    margin-top: -162px; 
+    position: absolute;
+    right: 0; 
+    margin-left: 2px;
+  }
+
 ion-card {
     box-shadow: none;
 }
 
 ion-header.headth {
-
-
     padding-bottom: 0px;
     padding-top: 0px;
     background-image: none !important;
