fixed sonar-search two images

--- a/src/app/pages/map/map-search/map-search.component.scss
+++ b/src/app/pages/map/map-search/map-search.component.scss
@@ -1,11 +1,11 @@
 .sonareventimg {
-    margin-top: -273px;
+    margin-bottom: 690px;
     position: absolute;
     right: 0; 
     margin-left: 2px;
   }
   .sonardonationimg {
-    margin-top: -162px; 
+    margin-bottom: 570px; 
     position: absolute;
     right: 0; 
     margin-left: 2px;
