--- a/src/app/pages/map/map-search/map-search.component.html
+++ b/src/app/pages/map/map-search/map-search.component.html
@@ -19,8 +19,11 @@
     </ion-segment>
   </ion-toolbar>
 </ion-header>
-
-<!-- <ion-content overflow-scroll="true"> -->
+<div  *ngIf="showIcons" style="display: flex; justify-content: space-between; align-items: center;">
+  <img class="sonareventimg" src="assets/custom-ion-icons/sonar_event.svg" style="font-size: 60px;">
+  <img class="sonardonationimg" src="assets/custom-ion-icons/sonar_donations.svg" style="font-size: 60px;">
+</div>
+<ion-content overflow-scroll="true">
 
   <!-- <div class="ion-container" *ngIf="showIcons"style="display: flex; flex-direction: column;">
 
@@ -29,10 +32,7 @@
             <ion-icon style="font-size: 60px;" name="sonar-donation"></ion-icon>
 
           </div> -->
-          <div  *ngIf="showIcons" style="display: flex; justify-content: space-between; align-items: center;">
-            <img class="sonareventimg" src="assets/custom-ion-icons/sonar_event.svg" style="font-size: 60px;">
-            <img class="sonardonationimg" src="assets/custom-ion-icons/sonar_donations.svg" style="font-size: 60px;">
-          </div>
+         
   
   <ion-list lines="none" style="  margin-top: 20px;">
     <div class="ele">
@@ -77,7 +77,7 @@
           <Tr>
             <ion-button class="locationsearch" shape="round"(click)="openMap()"> Set Location</ion-button>
             <!-- <Td>
-              Location
+              Locatio
             </Td>
             <Td>
               <ion-input class=" locationsearch"  type="textarea"></ion-input>
@@ -129,4 +129,4 @@
       </ion-button>
     </div>
   </ion-list>
-<!-- </ion-content> -->
+</ion-content>
