--- a/src/app/pages/sidemenu/e-card/e-card.page.html
+++ b/src/app/pages/sidemenu/e-card/e-card.page.html
@@ -19,7 +19,7 @@
       <ion-card-header>
         <ion-avatar>
           <div>
-            <img src="{{appConstants.mediaPrefix + userCanavasProfile.canvasProfile.ProfileImage}}" style="width: 100%; height:100%; object-fit: cover;"
+            <img src="{{appConstants.mediaPrefix + userCanvasProfile.canvasProfile.ProfileImage}}" style="width: 100%; height:100%; object-fit: cover;"
             onError="this.src='assets/icons/business/anonymous.svg'" onError="this.src='assets/icons/business/anonymous.svg'" />
           </div>
         </ion-avatar>
