added touch on mobile crop

--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.html
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.html
@@ -14,7 +14,9 @@
   </ion-slides>
 </div>
 
-<div class="resizable-handle" (mousedown)="onMouseDown($event, imageElement.nativeElement, imageContainer.nativeElement)"></div>
-
+<div class="resizable-handle" 
+     (mousedown)="onMouseDown($event, imageElement.nativeElement, imageContainer.nativeElement)"
+     (touchstart)="onMouseDown($event, imageElement.nativeElement, imageContainer.nativeElement)">
+</div>
 
 
