--- a/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
+++ b/src/app/core/components/new-image-cropper/new-image-cropper.component.scss
@@ -1,23 +1,35 @@
 .flexible-div {
     background-color: aquamarine;
     position: relative;
-    overflow: hidden;
+    overflow: visible;
   }
   
   .image-container {
-    width: 100%;
-    height: 100%;
+    // width: 100%;
+    // height: 100%;
     position: relative;
+    overflow: visible;
   }
+  
+  // .movable-image {
+  //   cursor: move;
+  //   width:100%;
+  //   height: 100%;
+  //   object-fit: cover;
+  //   user-select: none;
+  // }
   
   .movable-image {
-    cursor: move;
-    width:100%;
-    height: 100%;
-    object-fit: cover;
-    user-select: none;
+    cursor: grab; /* Cursor changes to grab */
+    // transform: translate(-50%, -50%);
+    transition: transform 0.2s ease; /* Smooth transition for zoom */
+    // width: 100%;
+    // height: 100%;
+    // object-fit: cover; /* Or use contain based on your needs */
+    // top: 50%;
+    // left: 50%;
   }
-  
+
   .resizable-handle {
     height: 5px;
     background-color: gray;
